--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9KD66C08DF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9KD66C08DF');
+</script>
 <body>
     <div class="sidebar">
         <a href="#about" class="nav-link">About</a>
